--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,3 +1,12 @@
 #main {
     margin-top: 1em;
 }
+
+#navbar {
+    margin-top: 1em;
+}
+
+.login-form {
+    max-width: 350px;
+    margin: 0 auto;
+}
